--- a/index.html
+++ b/index.html
@@ -15,5 +15,41 @@
     <p>Esto es <strong>NEGRILLA STRONG PALABRAS CLAVES</strong>un parrafo</p>
     <a href="https://www.youtube.com"target="_black">IR  a youtube-</a>     </a>
     <a href="inicio.html"> IR a INIICio </a>
+    <img src="Images/UdbImagen.png"
+    alt = "Logo Udb"
+    width="150"> 
+
+    <a href="https://uniboyaca.edu.co">
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRqmBRLkEfk-IG6oPx61cb0wrMdRlB-b2wtHA&s"
+            alt="Logo Udb"
+            width="150">
+    </a>
+    <table border ="2">
+        <tr>
+            <td> Celda 11  </td>
+            <td> Celda 12  </td>
+            <td> Celda 13  </td>
+        </tr>
+            <td> Celda 21  </td>
+            <td> Celda 22  </td>
+            <td> Celda 23   </td>
+        <tr>    
+    </table>
+    <table border ="1">
+        <thead>
+            <tr>
+                <th> Columna 1   </th>
+            </tr>
+        </thead> 
+        <tbody>
+
+        </tbody>
+        <tfoot>
+
+        </tfoot>
+
+    </table>
+
+    
 </body>
 </html>
