--- a/inicio.html
+++ b/inicio.html
@@ -9,5 +9,7 @@
     <p>Esta es una página HTML básica.</p>
     <p>Para volver a la página principal, haz clic en el siguiente enlace:</p>
     <a href="index.html">Volver a la página principal</a>
+    <p>Para acceder al formulario de encuesta, haz clic en el siguiente enlace:</p>
+    <a href="survey.html">Ir al formulario de encuesta</a>
 </body>
 </html>
