--- a/index.html
+++ b/index.html
@@ -1,55 +1,28 @@
 <!DOCTYPE html>
-<html lang="es"> 
+<html lang="en">    
 <head>
     <meta charset="UTF-8">
-    <title>Mi Página Web</title>
-    <!-- Esto es un comentario   -->
+    <title>CSS</title>
+    <style>
+        .mayorTamanio{
+            font-size: 50px;
+        }
+        h1{
+            font-family: Verdana, Geneva, Tahoma, sans-serif;
+            color:color-mix(in srgb, color percentage, color percentage)
+
+        }
+    </style> 
+    <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
-    <h1>TITULO</h1> 
-    <h2>SUbtitulo</h2>
-    <h3>otro titulo</h3>
-    <h4>prueba <br> Salto <I>de</I> linea h4</h4>
-    <h5>prueba h5</h5>
-    <h6>Prueba<B>  SOLO LO PONE NEGRO </B> h6</h6>         
-    <p>Esto es <strong>NEGRILLA STRONG PALABRAS CLAVES</strong>un parrafo</p>
-    <a href="https://www.youtube.com"target="_black">IR  a youtube-</a>     </a>
-    <a href="inicio.html"> IR a INIICio </a>
-    <img src="Images/UdbImagen.png"
-    alt = "Logo Udb"
-    width="150"> 
+    <h1>
+         Hola mundo
+    </h1>
+    <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quod.
+    </p>
+    <p id="Texto"> Texto de prueba </p>
 
-    <a href="https://uniboyaca.edu.co">
-        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRqmBRLkEfk-IG6oPx61cb0wrMdRlB-b2wtHA&s"
-            alt="Logo Udb"
-            width="150">
-    </a>
-    <table border ="2">
-        <tr>
-            <td> Celda 11  </td>
-            <td> Celda 12  </td>
-            <td> Celda 13  </td>
-        </tr>
-            <td> Celda 21  </td>
-            <td> Celda 22  </td>
-            <td> Celda 23   </td>
-        <tr>    
-    </table>
-    <table border ="1">
-        <thead>
-            <tr>
-                <th> Columna 1   </th>
-            </tr>
-        </thead> 
-        <tbody>
-
-        </tbody>
-        <tfoot>
-
-        </tfoot>
-
-    </table>
-
-    
 </body>
 </html>
